--- a/item01/output.tmpl
+++ b/item01/output.tmpl
@@ -3,7 +3,7 @@ const int cx = x;   ${{comment}}// cx 的类型是 const int${{default}}
 const int& rx = x;  ${{comment}}// rx 的类型是 const int&${{default}}
 
 template<typename T>
-void f(T& param)
+void f(${{param_type}} param)
 
 f(x);  ${{comment}}// T 的型别是 ${{variable}}${{tx}}${{comment}}, param 的型别是 ${{variable}}${{px}}${{default}}
 
