--- a/item01/output.tmpl
+++ b/item01/output.tmpl
@@ -1,6 +1,6 @@
-int x = 27;         ${{comment}}// x 的类型是 int${{default}}
-const int cx = x;   ${{comment}}// cx 的类型是 const int${{default}}
-const int& rx = x;  ${{comment}}// rx 的类型是 const int&${{default}}
+${{type_x}} x = 27;         ${{comment}}// x 的类型是 ${{type_x}}${{default}}
+${{type_cx}} cx = x;   ${{comment}}// cx 的类型是 ${{type_cx}}${{default}}
+${{type_rx}} rx = x;  ${{comment}}// rx 的类型是 ${{type_rx}}${{default}}
 
 template<typename T>
 void f(${{param_type}} param)
